events added new background intro

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                         <a class="page-scroll" href="#bio">BIO</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#events">Events</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#music">Music</a>
                     </li>
                     <li>
-                        <a href="">Press Kit</a>
+                        <a href="http://www.djphenom.com/DJ-Phenom-Press-Kit.pdf">Press Kit</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -78,7 +81,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2"> 
-                        <img id="logo" class="img-responsive" src="/Users/andrewvelasco/djphenomblog/img/phenom-logo.png"></img>
                     </div>
                 </div>
             </div>
@@ -106,6 +108,23 @@
         </div>
     </section>
 
+     <section id="events" class="content-section text-center">
+    <!--    <div class="music-section"> -->
+            <div class="container">
+                <div class="col-lg-4 col-lg-offset-8">
+                    <h2>Upcoming Events</h2>
+                        <ul class="list-unstyled">
+                            <li><p>Event 1</p></li>
+                            <li><p>Event 2</p></li>
+                            <li><p>Event 3</p></li>
+                            <li><p>Event 4</p></li>
+                            <li><p>Event 4</p></li>
+                        </ul>    
+                   </div>
+            </div>
+      <!--  </div>-->
+    </section>
+
     <!-- Download Section -->
     <section id="music" class="content-section text-center">
     <!--    <div class="music-section"> -->
@@ -126,15 +145,18 @@
                 <p>For all inquiries, reach out to:</p>
                 <p><a href="mailto:phenom.nyc@gmail.com">phenom.nyc@gmail.com</a>
                 </p>
-                <ul class="list-inline banner-social-buttons">
+                <ul class="list-inline banner-social-buttons socialtext">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" ><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/DJPhenomOnline" ><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" ><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/RealDJPhenom/"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                     <li>
+                        <a href="https://www.instagram.com/djphenom/"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Soundcloud</span></a>
+                        <a href="https://soundcloud.com/dj-phenom"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
